--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "fastclick": "^1.0.6",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -26,6 +27,7 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
+    "better-scroll": "^1.15.2",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
