--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "author": "zjj <937859043@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --host 0.0.0.0 --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-polyfill": "^6.26.0",
     "fastclick": "^1.0.6",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
